tests/samples/invalid/duplicate_return.pn
fn main() -> i32
{
	var x = 33;

	goto return;

	return:

	x = 7;

	return:
	x
}
